<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="20px"
              android:paddingLeft="20px"

        >

    <CheckBox
        android:id="@+id/chek1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/check1"
    />


    <CheckBox
            android:id="@+id/chek2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/check2"
            />


    <CheckBox
            android:id="@+id/chek3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/check3"
            />

    <Button
        android:id="@+id/btnActivar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:width="250px"
        android:text="@string/botonActivar"
            ></Button>

    <TextView
        android:id="@+id/lblTexto"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/campoTexto"
        ></TextView>




</LinearLayout>