<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="20px"
              android:paddingTop="20px">

   <RadioGroup
           android:id="@+id/grupo1"
           android:orientation="vertical"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content">


    <RadioButton
        android:id="@+id/radio1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio1"
    />

    <RadioButton
            android:id="@+id/radio2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/radio2"
            />

    <!--<RadioButton
            android:id="@+id/radio3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/radio3"
            ></RadioButton>
   </RadioGroup>-->
    </RadioGroup>
    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto"/>



</LinearLayout>